horizontal scrolling issue

--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -7,10 +7,9 @@
   
 @media screen and (max-width:640px) {
     .place__image {
+        min-width: 100%;
         margin: 30px 0 30px;
-        min-width: 100vw;
         align-self: center;
         padding: 0;
     }
 }
-
